<resources>
    <string name="app_name">My Application</string>
    <string name="app_logo_top">BEEN THERE</string>
    <string name="app_logo_bottom">DONE THAT!</string>
    <string name="app_version_info">Version 2.0.0\nCopyright © 2011 Mamlambo\nAll Rights Reserved.</string>
    <!-- Accessibility descriptions for splash images -->
    <string name="desc_splash1">Logo image one</string>
    <string name="desc_splash2">Logo image two</string>
    <string name="desc_splash3">Logo image three</string>
    <string name="desc_splash4">Logo image four</string>
</resources>