<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:padding="16dp">

    <TextView
        android:id="@+id/topTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_logo_top"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/logoTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layoutAnimation="@anim/layout_animation"
        android:stretchColumns="*"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerInside"
                android:visibility="visible"
                android:background="#33ffffff"
                android:contentDescription="@string/desc_splash1"
                android:src="@drawable/splash1"
                android:adjustViewBounds="true"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerInside"
                android:visibility="visible"
                android:background="#33ffffff"
                android:contentDescription="@string/desc_splash2"
                android:src="@drawable/splash2"
                android:adjustViewBounds="true"
                android:layout_margin="8dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerInside"
                android:visibility="visible"
                android:background="#33ffffff"
                android:contentDescription="@string/desc_splash3"
                android:src="@drawable/splash3"
                android:adjustViewBounds="true"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerInside"
                android:visibility="visible"
                android:background="#33ffffff"
                android:contentDescription="@string/desc_splash4"
                android:src="@drawable/splash4"
                android:adjustViewBounds="true"
                android:layout_margin="8dp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/bottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_logo_bottom"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textStyle="bold" />

</LinearLayout>
